Add Readme information

--- a/app/templates/app/templates/app.html
+++ b/app/templates/app/templates/app.html
@@ -16,17 +16,17 @@
 	
 	<h2>Generators</h2>
 	<ul>
-		<li><code>yeoman init footguard:collection</code> create Backbone Collection class (with model if you want)</li>
-		<li><code>yeoman init footguard:model</code> create Backbone Model class</li>
-		<li><code>yeoman init footguard:helper</code> create a helper class</li>
-		<li><code>yeoman init footguard:view</code> create Backbone View class (with model, template and Sass file)</li>
+		<li><code>yo footguard:collection</code> create Backbone Collection class (with model if you want)</li>
+		<li><code>yo footguard:model</code> create Backbone Model class</li>
+		<li><code>yo footguard:helper</code> create a helper class</li>
+		<li><code>yo footguard:view</code> create Backbone View class (with model, template and Sass file)</li>
 	</ul>
 
 	<h2>Command</h2>
 	<ul>
-		<li><code>yeoman server</code> to launch your project with watch and livereload</li>
-		<li><code>yeoman compile</code> to compile all Sass, less and CoffeeScript files</li>
-		<li><code>yeoman build</code> to build a deploy version of your project</li>
+		<li><code>grunt server</code> to launch your project with watch and livereload</li>
+		<li><code>grunt compile</code> to compile all Sass, less and CoffeeScript files</li>
+		<li><code>grunt build</code> to build a deploy version of your project</li>
 		<li><code>testem</code> to launch unit test with Test'em'</li>
 	</ul>
 	
