Fix #10 and #11: update npm and bower libs

--- a/app/templates/test/runner/test.css
+++ b/app/templates/test/runner/test.css
@@ -5,6 +5,7 @@ body {
 #mocha {
 	display: block;
 	padding: 60px;
+	margin: 0;
 
 	position: absolute;
 	top: 0;
@@ -20,4 +21,8 @@ body {
 #mocha .progress {
 	height: 40px;
 	width: 40px;
+}
+
+#mocha h2, #mocha li {
+	line-height: 12px;
 }
