Update all libs

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -31,6 +31,8 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<!-- endbuild -->
 		
+		<!-- Test snippet -->
+
 	</head>
 	<body>
 		
