--- a/app/templates/app/templates/app.html
+++ b/app/templates/app/templates/app.html
@@ -10,7 +10,6 @@
 		<li>HTML5 Boilerplate (<a href="http://html5boilerplate.com/">http://html5boilerplate.com/</a>)</li>
 		<li>Twitter Bootstrap (<a href="http://twitter.github.com/bootstrap/">http://twitter.github.com/bootstrap/</a>)</li>
 		<li>Mocha test (<a href="http://visionmedia.github.com/mocha/">http://visionmedia.github.com/mocha/</a>)</li> 
-		<li>with Test'em (<a href="https://github.com/airportyh/testem">https://github.com/airportyh/testem</a>)</li>
 	</ul>
 	<p>installed.</p>
 	
@@ -27,7 +26,9 @@
 		<li><code>grunt server</code> to launch your project with watch and livereload</li>
 		<li><code>grunt compile</code> to compile all Sass, less and CoffeeScript files</li>
 		<li><code>grunt build</code> to build a deploy version of your project</li>
-		<li><code>testem</code> to launch unit test with Test'em'</li>
+		<li><code>grunt server-dist</code> to launch your project in builed version</li>
+		<li><code>grunt test</code> to launch unit test in console</li>
+		<li><code>grunt server-test</code> to launch unit test in browser</li>
 	</ul>
 	
 	<h2>For start</h2>
@@ -36,5 +37,5 @@
 		Start coding!
 	</p>
 	
-	<h3>Enjoy coding! - Yeoman</h3>
+	<h3>Enjoy coding! - Mathieu Desvé</h3>
 </div>
