--- a/app/templates/test/runner/test.css
+++ b/app/templates/test/runner/test.css
@@ -2,7 +2,7 @@ body {
 	padding: 0;
 }
 
-#mocha {
+.mocha {
 	display: block;
 	padding: 60px;
 	margin: 0;
@@ -18,11 +18,12 @@ body {
 	background-color: white;
 }
 
-#mocha .progress {
+.mocha .progress {
 	height: 40px;
 	width: 40px;
 }
 
-#mocha h2, #mocha li {
+h2, 
+.mocha li {
 	line-height: 12px;
 }
