--- a/app/templates/app/templates/app.html
+++ b/app/templates/app/templates/app.html
@@ -10,6 +10,7 @@
 		<li>HTML5 Boilerplate (<a href="http://html5boilerplate.com/">http://html5boilerplate.com/</a>)</li>
 		<li>Twitter Bootstrap (<a href="http://twitter.github.com/bootstrap/">http://twitter.github.com/bootstrap/</a>)</li>
 		<li>Mocha test (<a href="http://visionmedia.github.com/mocha/">http://visionmedia.github.com/mocha/</a>)</li> 
+		<li>KSS Styleguide (<a href="http://warpspire.com/kss/">http://warpspire.com/kss/</a>)</li> 
 	</ul>
 	<p>installed.</p>
 	
