committing all files

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -30,6 +30,7 @@
 		<link rel="stylesheet" type="text/css" href="css/all-less.css">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<!-- endbuild -->
+		<link href='http://fonts.googleapis.com/css?family=Source+Code+Pro|Josefin+Slab:400,700,400italic' rel='stylesheet' type='text/css'>
 		
 		<!-- Test snippet -->
 
