--- a/app/templates/app/templates/app.html
+++ b/app/templates/app/templates/app.html
@@ -18,7 +18,7 @@ MathJax.Hub.Config({
 <p>Dislike typing LaTeX reports?</p>
 <p>Here's a template which gets you up and running with printing your school homework, set in Markdown, with the power of LaTeX.</p>
 
-<p>Here's some Math with $$\alpha \beta $$:</p>
+<p>Here's some Math with $$$\alpha \beta $$$:</p>
 
 $$
 F = \frac {G m_1 m_2} {r^2}
@@ -28,7 +28,7 @@ $$
   <code> a = abc</code>
 </pre>
 
-Or type some <code>inline code</code> like suck
+Or type some <code>inline code</code>.
 
 <p>Try printing this out!</p>
 
