--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -22,6 +22,7 @@
 		
 		<!-- build:js js/all.js -->
 		<script src="components/marked/lib/marked.js"></script>
+		<script src="components/highlightjs/highlight.pack.js"></script>
 		<script src="components/raphael/raphael.js"></script>
 		<script src="components/requirejs/require.js"></script>
 		<script src="js/main.js"></script>
@@ -29,9 +30,9 @@
 		
 		<!-- build:css css/all.css -->
 		<link rel="stylesheet" type="text/css" href="css/all-less.css">
+		<link rel="stylesheet" href="components/highlightjs/styles/github.css">
 		<!-- endbuild -->
 		<link rel="stylesheet" type="text/css" href="css/main.css">
-		<link href='http://fonts.googleapis.com/css?family=Source+Code+Pro|Josefin+Slab:400,700,400italic' rel='stylesheet' type='text/css'>
 		
 		<!-- Test snippet -->
 
