"Twitter Bootstrap" is now simply Bootstrap
See http://getbootstrap.com/about/#brand

--- a/app/templates/app/templates/app.html
+++ b/app/templates/app/templates/app.html
@@ -8,7 +8,7 @@
 		<li>Backbone (<a href="http://backbonejs.org/">http://backbonejs.org/</a>)</li>
 		<li>Sass (<a href="http://sass-lang.com/">http://sass-lang.com/</a>)</li>
 		<li>HTML5 Boilerplate (<a href="http://html5boilerplate.com/">http://html5boilerplate.com/</a>)</li>
-		<li>Twitter Bootstrap (<a href="http://twitter.github.com/bootstrap/">http://twitter.github.com/bootstrap/</a>)</li>
+		<li>Bootstrap (<a href="http://getbootstrap.com/">http://getbootstrap.com/</a>)</li>
 		<li>Mocha test (<a href="http://visionmedia.github.com/mocha/">http://visionmedia.github.com/mocha/</a>)</li> 
 		<li>KSS Styleguide (<a href="http://warpspire.com/kss/">http://warpspire.com/kss/</a>)</li> 
 	</ul>
